revised draft for 19 Feb 2023

--- a/newsletter/2023-02-19.md
+++ b/newsletter/2023-02-19.md
@@ -1,24 +1,20 @@
-# TKTKTKTKT
+# tktktkt
 ## #Web3Weekly: Feb. 12-18, 2023
 
 ![A quilt with images of the U.S. capitol and the bitcoin and ethereum logos](https://w3w.news/img/illos/crazy-quilt-final.jpg)
 *"Crazy Quilt" by Peter A. McKay × DALL·E*
 
-**The future of U.S. crypto regulation** just became a little clearer, but not necessarily prettier.
+**The future of U.S. crypto regulation** just became a little clearer -- but not necessarily prettier.
 
-The pretty version would probably be for Congress to pass a law establishing a comprehensive legal framework for the industry. 
+As most press coverage is quick to point out, Congress so far hasn't passed a comprehensive federal framework for the industry. Such legislation would give the industry true clarity about what's allowed, what isn't, and how to comply.
 
-Sure, the significant
+Crypto-libertarian sorts probably have no problem with this congressional inaction, or even prefer it. But what's filling the legal vacuum isn't exactly desirable either: A patchwork of civil litigation and enforcement under *existing* law, much of it written [decades before](https://www.sec.gov/about/laws/secrulesregs) Satoshi published the [Bitcoin whitepaper](https://bitcoin.org/en/bitcoin-paper) in 2008.    
 
-The sane version would be for
+It's also not exactly clear which of America's many regulatory agencies, at both the federal and state level, have jurisdiction over crypto and which don't. So they all seem to be just bringing cases and seeing what sticks.
 
-<!-- Re-top, rewrite to focus on regulation... -->
+In other words, a confusing [AF](https://www.urbandictionary.com/define.php?term=AF) nightmare.
 
-My view of U.S. crypto regulation comprises three main points:
-
-1. The industry would ideally get a comprehensive framework that clarifies what it can and cannot do.
-2. The basic dysfunction of Congress -- on everying -- precludes this from happening. This is a Congress where the two chambers are controlled by different parties, and the Speaker of the House lives in abject fear of getting booted from his job by even a single disgruntled member of his own caucus.
-3. For the time being, applying old laws as they see fit.
+Which brings us to the latest headlines:
 
 - **New York state regulators ordered** Paxos to [stop minting](https://www.dfs.ny.gov/consumers/alerts/Paxos_and_Binance) the stablecoin Binance USD, citing concerns about the reserves backing the token. In a [statement to customers](https://paxos.com/2023/02/13/paxos-will-halt-minting-new-busd-tokens/) on Monday, Paxos said it will continue to redeem their BUSD tokens for $1 each through at least February 2024, and that it is cutting ties to Binance, the exchange it partnered with on BUSD. The token is currently the eighth-largest in the world by market valuation, at $13.6 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/binance-usd/).
 
@@ -31,17 +27,13 @@ Combined with the SEC's [recent settlement](https://www.sec.gov/news/press-relea
 
 - **Basketball Hall of Famer Paul Pierce** agreed to pay a $1.4 million fine to settle an SEC complaint that he [didn't disclose publicly](https://www.cbsnews.com/boston/news/paul-pierce-paying-million-settlement-sec-cryptocurrency-violations-ethereummax/) that he was paid to promote EthereumMax. The fine is similar to one paid by Kim Kardashian last year, in a case clearly meant by the SEC to [send a message](https://www.theblock.co/post/212937/sec-warns-celebrities-after-charging-nba-hall-of-famer-over-crypto-promotion) to other celebrity endorsers.
 
-- Japanese regulators are embracing web3. () https://www.coindesk.com/consensus-magazine/2023/01/26/japan-embracing-crypto-industry-web3-dao-nft/
+- **The judge in Sam Bankman-Fried's criminal case** warned he might [revoke the FTX founder's bail](https://nypost.com/2023/02/16/sbf-could-be-locked-up-if-he-continues-encryption-use-judge/) if he continues to use an encrypted virtual private network or contact former exchange employees. Prosecutors complained about Bankman-Fried doing both those things on Super Bowl Sunday. His lawyers argued he was just [chatting about the game](https://cointelegraph.com/news/sam-bankman-fried-s-use-of-a-vpn-on-super-bowl-sunday-raised-concerns-say-prosecutors) with former colleagues.
 
-- Separate crypto custody from exchange: () https://www.coindesk.com/consensus-magazine/2023/01/26/crypto-laws-us-protect-consumers-custody-exchange-separation/
+- **Wyoming lawmakers** passed a bill that [prohibits forced disclosure](https://www.coindesk.com/policy/2023/02/16/wyoming-lawmakers-pass-bill-prohibiting-forced-disclosure-of-private-crypto-keys/?utm_medium=referral&utm_source=rss&utm_campaign=headlines) of private keys.
 
-- Wyoming lawmakers passed a bill that prohibits forced disclosure of private keys. (https://www.coindesk.com/policy/2023/02/16/wyoming-lawmakers-pass-bill-prohibiting-forced-disclosure-of-private-crypto-keys/?utm_medium=referral&utm_source=rss&utm_campaign=headlines)
+- **CoinDesk's Marc Hochstein** suggests it might make sense to have a U.S. law [separating crypto custody from exchange](https://www.coindesk.com/consensus-magazine/2023/01/26/crypto-laws-us-protect-consumers-custody-exchange-separation/). The structure would be similar to how commercial and investment banking used to be separated on Wall Street under the [Glass-Steagall Act](https://www.federalreservehistory.org/essays/glass-steagall-act). Hmmm...
 
-- Judge is threatening to throw Sam Bankman-Fried back in jail. () <!-- Need link... Meanwhile... All the people who chipped in to pay Sam Bankman-Fried's bail have ties to Stanford University. The incident is emblematic of why the traditional tech industry in Northern California is losing prestige, says TKTKTKTKTKT. (https://www.coindesk.com/consensus-magazine/2023/02/16/bankman-frieds-stanford-connected-backers-and-the-decline-of-tech-prestige/?utm_medium=referral&utm_source=rss&utm_campaign=headlines) -->
-
-- Binance transferred 400M from a US partner to a CZ-controlled firm. Hmm... (https://www.theblock.co/post/212658/binance-transferred-400-million-from-u-s-partner-to-zhao-run-firm-reuters-says?utm_source=rss&utm_medium=rss)
-
-- **Apple** has a [movie about Tetris](https://www.youtube.com/watch?v=Hcfbg994fu4) in the works. WTF.
+- **Off-topic but notable:** Apple has a [movie about Tetris](https://www.youtube.com/watch?v=Hcfbg994fu4) in the works.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 _**Note: This content is for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
