Copy for 19 Feb 2023

--- a/newsletter/2023-02-19.md
+++ b/newsletter/2023-02-19.md
@@ -1,4 +1,4 @@
-# tktktkt
+# Who Regulates Crypto in the U.S.? It's Complicated.
 ## #Web3Weekly: Feb. 12-18, 2023
 
 ![A quilt with images of the U.S. capitol and the bitcoin and ethereum logos](https://w3w.news/img/illos/crazy-quilt-final.jpg)
@@ -12,11 +12,11 @@ Crypto-libertarian sorts probably have no problem with this congressional inacti
 
 It's also not exactly clear which of America's many regulatory agencies, at both the federal and state level, have jurisdiction over crypto and which don't. So they all seem to be just bringing cases and seeing what sticks.
 
-In other words, a confusing [AF](https://www.urbandictionary.com/define.php?term=AF) nightmare.
+In other words, a confusing [AF](https://www.urbandictionary.com/define.php?term=AF) nightmare that seems likely to drag on awhile longer, at least.
 
-Which brings us to the latest headlines:
+The latest headlines:
 
-- **New York state regulators ordered** Paxos to [stop minting](https://www.dfs.ny.gov/consumers/alerts/Paxos_and_Binance) the stablecoin Binance USD, citing concerns about the reserves backing the token. In a [statement to customers](https://paxos.com/2023/02/13/paxos-will-halt-minting-new-busd-tokens/) on Monday, Paxos said it will continue to redeem their BUSD tokens for $1 each through at least February 2024, and that it is cutting ties to Binance, the exchange it partnered with on BUSD. The token is currently the eighth-largest in the world by market valuation, at $13.6 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/binance-usd/).
+- **New York state regulators ordered** Paxos to [stop minting](https://www.dfs.ny.gov/consumers/alerts/Paxos_and_Binance) the stablecoin Binance USD, citing concerns about the reserves backing the token. Paxos [told customers](https://paxos.com/2023/02/13/paxos-will-halt-minting-new-busd-tokens/) it will continue to redeem their BUSD tokens for $1 each through at least February 2024, and that it is cutting ties to Binance, the exchange it partnered with on BUSD. The token is currently the eighth-largest in the world by market valuation, at $13.6 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/binance-usd/).
 
 - **The Securities and Exchange Commission charged** Terraform Labs CEO Do Kwon [with fraud](https://www.sec.gov/news/press-release/2023-32) in connection with the meltdown of its Luna and TerraUSD tokens last year. The SEC says Kwon moved 10,000 bitcoin out of Terra into an offline wallet and cashed some of them out via a Swiss bank ahead of the fiasco. Kwon's whereabouts have been unknown since last fall, when Interpol [issued a "red notice"](https://www.nytimes.com/2022/09/26/business/interpol-do-kwon-korea-crypto.html) for his capture at the request of South Korean authorities.   
 
@@ -36,6 +36,7 @@ Combined with the SEC's [recent settlement](https://www.sec.gov/news/press-relea
 - **Off-topic but notable:** Apple has a [movie about Tetris](https://www.youtube.com/watch?v=Hcfbg994fu4) in the works.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
-_**Note: This content is for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
+ _**If your organization is interested in sponsoring the newsletter, please drop me an email at peter[at]w3w.media. Individuals are also welcome to make crypto donations to support the newsletter using the wallet addresses listed [here](https://w3w.news/donations).**_
+_**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
 _**Best wishes for a healthy and productive week ahead.**_  
-_**-- Peter A. McKay**_  
+_**-- Peter A. McKay**_
