Re-topping 19 Feb 2023 edition

--- a/newsletter/2023-02-19.md
+++ b/newsletter/2023-02-19.md
@@ -4,17 +4,21 @@
 ![A quilt with images of the U.S. capitol and the bitcoin and ethereum logos](https://w3w.news/img/illos/crazy-quilt-final.jpg)
 *"Crazy Quilt" by Peter A. McKay × DALL·E*
 
-**The future of U.S. crypto regulation** just became a little clearer -- but not necessarily prettier.
+**There's no shortage of speculation** about the future of U.S. crypto regulation lately. But I think the ultimate answer is hiding in plain sight.
 
-As most press coverage is quick to point out, Congress so far hasn't passed a comprehensive federal framework for the industry. Such legislation would give the industry true clarity about what's allowed, what isn't, and how to comply.
+It's the status quo. [WYSIWYG](https://www.urbandictionary.com/define.php?term=WYSIWIG), folks. This is all there is for the time being:
 
-Crypto-libertarian sorts probably have no problem with this congressional inaction, or even prefer it. But what's filling the legal vacuum isn't exactly desirable either: A patchwork of civil litigation and enforcement under *existing* law, much of it written [decades before](https://www.sec.gov/about/laws/secrulesregs) Satoshi published the [Bitcoin whitepaper](https://bitcoin.org/en/bitcoin-paper) in 2008.    
+A patchwork of state and federal agencies "creatively" applying *existing* laws to crypto that were mostly written [decades before](https://www.sec.gov/about/laws/secrulesregs) Satoshi published the [Bitcoin whitepaper](https://bitcoin.org/en/bitcoin-paper) in 2008. They're throwing a bunch of cases against the wall and seeing what sticks in court.
 
-It's also not exactly clear which of America's many regulatory agencies, at both the federal and state level, have jurisdiction over crypto and which don't. So they all seem to be just bringing cases and seeing what sticks.
+Here's what we *don't* have and probably won't get anytime soon: A comprehensive, modern framework passed by Congress that gives the industry true clarity at the federal level about what's allowed, what isn't, who's really got jurisdiction, and how to comply.
 
-In other words, a confusing [AF](https://www.urbandictionary.com/define.php?term=AF) nightmare that seems likely to drag on awhile longer, at least.
+The most obvious obstacle in Congress is many members' general lack of familiarity with blockchain technology. But the underrated one, in my opinion, is the body's general paralysis on *everything*. Crypto is not some magical exception to this.
 
-The latest headlines:
+It's now considered a [major cliffhanger](https://www.reuters.com/markets/us/us-debt-ceiling-markets-gauging-fallout-2023-02-16/) whether Congress can even pass a bill to maintain the full credit of the United States, or an annual budget to [keep federal agencies open](https://www.reuters.com/world/us/what-happens-when-us-federal-government-shuts-down-2021-09-27/) and running properly.
+
+You think this same set of people will pass a comprehensive crypto bill anytime soon? Good luck.
+
+I know that's an unsatisfying scenario for most people to hear. But I think the week's headlines bear it out loudly:
 
 - **New York state regulators ordered** Paxos to [stop minting](https://www.dfs.ny.gov/consumers/alerts/Paxos_and_Binance) the stablecoin Binance USD, citing concerns about the reserves backing the token. Paxos [told customers](https://paxos.com/2023/02/13/paxos-will-halt-minting-new-busd-tokens/) it will continue to redeem their BUSD tokens for $1 each through at least February 2024, and that it is cutting ties to Binance, the exchange it partnered with on BUSD. The token is currently the eighth-largest in the world by market valuation, at $13.6 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/binance-usd/).
 
@@ -24,6 +28,8 @@ The latest headlines:
 Combined with the SEC's [recent settlement](https://www.sec.gov/news/press-release/2023-25) with Kraken regarding yield-generating accounts, this appears to be a new line of legal inquiry for the SEC that could become a big headache for the broader crypto industry, Forbes [reports](https://www.forbes.com/sites/digital-assets/2023/02/17/sec-claims-new-turf-in-lawsuit-against-terrausd-stablecoin-creator/).
 
 - **The chairman of the U.S. House subcommittee** on digital assets [told CoinDesk](https://www.coindesk.com/consensus-magazine/2023/01/26/stablecoin-regulation-is-first-on-new-subcommittees-to-do-list-says-chairman/) that legislation to regulate stablecoins is a big priority for the group in the current congressional session.
+
+- **Some relevant context:** Bitcoin and Ethereum, which aren't stablecoins, currently constitute a combined 60% of global crypto market valuation. So the sort of legislation mentioned above, by definition, won't cover most of the industry, even if it could pass the full Congress and get signed into law. Which is all highly questionable itself. So that brings us right back to what I said earlier about a patchwork...
 
 - **Basketball Hall of Famer Paul Pierce** agreed to pay a $1.4 million fine to settle an SEC complaint that he [didn't disclose publicly](https://www.cbsnews.com/boston/news/paul-pierce-paying-million-settlement-sec-cryptocurrency-violations-ethereummax/) that he was paid to promote EthereumMax. The fine is similar to one paid by Kim Kardashian last year, in a case clearly meant by the SEC to [send a message](https://www.theblock.co/post/212937/sec-warns-celebrities-after-charging-nba-hall-of-famer-over-crypto-promotion) to other celebrity endorsers.
 
