Revising headline + sponsor elements

--- a/newsletter/2023-03-05.md
+++ b/newsletter/2023-03-05.md
@@ -1,8 +1,5 @@
-# tktktkktkt
+# Coinbase is going on offense
 ## #Web3Weekly: Feb. 26 to March 4, 2023
-
-![An axe in Coinbase blue](https://w3w.news/img/illos/axe-final.jpg)
-*"Coinbase's Axe" by Peter A. McKay × DALL·E*
 
 *This week I'm happy to announce a new partnership with the [Epic Web3 Conference](https://www.epicweb3.com/). Welcome, and thank you for supporting #Web3Weekly’s coverage of all things decentralized.*
 
@@ -16,23 +13,27 @@
 
 The exchange announced a new [grassroots lobbying campaign](https://twitter.com/coinbase/status/1630592674020335617) on Tuesday, including a national petition drive, to [influence pending crypto legislation](https://www.theblock.co/post/215829/coinbase-launches-grassroots-campaign-to-influence-us-lawmakers-and-regulators) in Congress.
 
-Coinbase has also been touting a [recent poll](https://assets.ctfassets.net/c5bd0wqjc7v0/WvuOkBwNXZsqhd6EWtkEL/7f94f8b6fbb222f3faf4d0346e473012/Morning_Consult_Cryptocurrency_Perception_Study_Feb2023_Memo__1_.pdf) by partner Morning Consult showing widespread mistrust and discontent among Americans regarding the traditional financial industry. With that data in hand, Coinbase CEO Brian Armstrong has been sunnily touting crypto as a necessary "update" to the U.S. financial system in television interviews Thursday with [Bloomberg](https://www.youtube.com/watch?v=SZobPKQYRyE&t) and [CNBC](https://www.youtube.com/watch?v=xrMtYuYV_Yw), as well as [an essay](https://www.cnbc.com/2023/03/01/op-ed-offshoring-crypto-hurts-financial-system-americas-standing.html) on the latter's website.
+Coinbase has also been touting a [recent poll](https://assets.ctfassets.net/c5bd0wqjc7v0/WvuOkBwNXZsqhd6EWtkEL/7f94f8b6fbb222f3faf4d0346e473012/Morning_Consult_Cryptocurrency_Perception_Study_Feb2023_Memo__1_.pdf) by partner Morning Consult showing widespread mistrust and discontent among Americans regarding the traditional financial industry.
 
 ![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)
 
+Armed with that polling data, Coinbase CEO Brian Armstrong sunnily touted crypto as a necessary "update" to the U.S. financial system in television interviews Thursday with [Bloomberg](https://www.youtube.com/watch?v=SZobPKQYRyE&t) and [CNBC](https://www.youtube.com/watch?v=xrMtYuYV_Yw), as well as [an essay](https://www.cnbc.com/2023/03/01/op-ed-offshoring-crypto-hurts-financial-system-americas-standing.html) on the latter's website.
+
+
 At first glance, it might be easy to dismiss all this as predictable political axe grinding. But it somehow feels more significant to me, to be frank.
 
-Look, Coinbase is by far America's largest publicly traded crypto company, with a market valuation near [$12 billion](https://duckduckgo.com/?q=ticker+COIN&t=brave&ia=stock). It's like crypto's version of the Big Board or Goldman Sachs, to put it in Wall Street metaphors.
-
-Hence what Coinbase says on issues like the above *matters* for the entire industry, like it or not. And when they start getting this vocal, it's worth our attention.
+Look, Coinbase is by far America's largest publicly traded crypto company, with a market valuation near [$12 billion](https://duckduckgo.com/?q=ticker+COIN&t=brave&ia=stock). It's like crypto's version of the Big Board or Goldman Sachs, to use Wall Street as a shorthand reference. Hence what Coinbase says on issues like the above *matters* for the entire industry, like it or not.
 
 The week's other notable headlines:
 
-- **Reuters reports that Visa and Mastercard** are putting their plans to expand crypto payments [on hold](https://www.reuters.com/technology/visa-mastercard-pause-crypto-push-wake-industry-meltdown-sources-2023-02-28/) due to the industry's struggles since late 2022.
+- **Shares of Silvergate crashed** after the publicly listed crypto bank [delayed filing](https://www.msn.com/en-us/money/companies/silvergate-capital-shares-drop-57-after-the-crypto-bank-delays-its-annual-report/ar-AA1893vp) its annual report late Wednesday, citing Crypto Winter-related struggles that may threaten its ability to remain in business. Clients have been [closing accounts](https://www.forbes.com/sites/digital-assets/2023/03/02/crypto-bank-silvergate-sees-client-exodus-as-delayed-annual-report-puts-future-in-question/), and fears of a broader contagion akin to last year's post-FTX fallout simmered, [weighing on](https://www.coindesk.com/markets/2023/03/03/bitcoin-ether-drop-over-5-in-massive-sell-off-as-market-continues-to-digest-silvergate/) the broader token market. Bitcoin fell nearly 5% on the week.
 
-- Silvergate exodus: https://www.forbes.com/sites/digital-assets/2023/03/02/crypto-bank-silvergate-sees-client-exodus-as-delayed-annual-report-puts-future-in-question/
+- **Reuters reports that Visa and Mastercard** are putting their plans to expand crypto payments [on hold](https://www.reuters.com/technology/visa-mastercard-pause-crypto-push-wake-industry-meltdown-sources-2023-02-28/).
 
-- BIS says banks cut their crypto exposure by 44% last year. (https://www.coindesk.com/policy/2023/02/28/certain-banks-crypto-exposure-dropped-by-44-globally-in-2022-from-previous-year-bis/?utm_medium=referral&utm_source=rss&utm_campaign=headlines)
+![An axe in Coinbase blue](https://w3w.news/img/illos/axe-final.jpg)
+*"Coinbase's Axe" by Peter A. McKay × DALL·E*
+
+- The Bureau of International Settlements says banks cut their crypto exposure by 44% last year. (https://www.coindesk.com/policy/2023/02/28/certain-banks-crypto-exposure-dropped-by-44-globally-in-2022-from-previous-year-bis/?utm_medium=referral&utm_source=rss&utm_campaign=headlines)
 
 - Crypto VC has slowed in 1Q '23, according to Crunchbase data (https://news.crunchbase.com/fintech-ecommerce/web3-venture-funding-crypto-prices/).
 
