More layout tweaks...

--- a/newsletter/2023-03-05.md
+++ b/newsletter/2023-03-05.md
@@ -11,14 +11,11 @@
 
 **Coinbase has begun pushing back hard** against crypto's battered reputation and uncertain regulatory outlook, especially in the U.S. But will it work?
 
-The exchange announced a new [grassroots lobbying campaign](https://twitter.com/coinbase/status/1630592674020335617) on Tuesday, including a national petition drive, to [influence pending crypto legislation](https://www.theblock.co/post/215829/coinbase-launches-grassroots-campaign-to-influence-us-lawmakers-and-regulators) in Congress.
-
-Coinbase has also been touting a [recent poll](https://assets.ctfassets.net/c5bd0wqjc7v0/WvuOkBwNXZsqhd6EWtkEL/7f94f8b6fbb222f3faf4d0346e473012/Morning_Consult_Cryptocurrency_Perception_Study_Feb2023_Memo__1_.pdf) by partner Morning Consult showing widespread mistrust and discontent among Americans regarding the traditional financial industry.
+The exchange announced a new [grassroots lobbying campaign](https://twitter.com/coinbase/status/1630592674020335617) on Tuesday, including a national petition drive, to [influence pending crypto legislation](https://www.theblock.co/post/215829/coinbase-launches-grassroots-campaign-to-influence-us-lawmakers-and-regulators) in Congress. Coinbase has also been touting a [recent poll](https://assets.ctfassets.net/c5bd0wqjc7v0/WvuOkBwNXZsqhd6EWtkEL/7f94f8b6fbb222f3faf4d0346e473012/Morning_Consult_Cryptocurrency_Perception_Study_Feb2023_Memo__1_.pdf) by partner Morning Consult showing widespread mistrust and discontent among Americans regarding the traditional financial industry.
 
 ![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)
 
 Armed with that polling data, Coinbase CEO Brian Armstrong sunnily touted crypto as a necessary "update" to the U.S. financial system in television interviews Thursday with [Bloomberg](https://www.youtube.com/watch?v=SZobPKQYRyE&t) and [CNBC](https://www.youtube.com/watch?v=xrMtYuYV_Yw), as well as [an essay](https://www.cnbc.com/2023/03/01/op-ed-offshoring-crypto-hurts-financial-system-americas-standing.html) on the latter's website.
-
 
 At first glance, it might be easy to dismiss all this as predictable political axe grinding. But it somehow feels more significant to me, to be frank.
 
