new sponsor link

--- a/newsletter/2023-03-05.md
+++ b/newsletter/2023-03-05.md
@@ -5,7 +5,7 @@
 
 *As a special offer for #Web3Weekly's email subscribers, Epic Web3 is offering a 15% discount on Full or VC passes to their upcoming conference, taking place June 9 in Lisbon.*
 
-*The event will include an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, from non-fungible tokens to cryptocurrencies to decentralized apps. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](https://www.epicweb3.com/#price).*
+*The event will include an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, from non-fungible tokens to cryptocurrencies to decentralized apps. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
 
 <!-- DOUBLE CHECK RSS FEEDS FOR LATE-BREAKING NEWS BEFORE GOING TO PRESS -->
 
