Fleshing out news summary items

--- a/newsletter/2023-03-05.md
+++ b/newsletter/2023-03-05.md
@@ -1,4 +1,4 @@
-# Coinbase is going on offense
+# Coinbase goes on offense
 ## #Web3Weekly: Feb. 26 to March 4, 2023
 
 *This week I'm happy to announce a new partnership with the [Epic Web3 Conference](https://www.epicweb3.com/). Welcome, and thank you for supporting #Web3Weekly’s coverage of all things decentralized.*
@@ -7,13 +7,11 @@
 
 *The event will include an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, from non-fungible tokens to cryptocurrencies to decentralized apps. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
 
-<!-- DOUBLE CHECK RSS FEEDS FOR LATE-BREAKING NEWS BEFORE GOING TO PRESS -->
-
 **Coinbase has begun pushing back hard** against crypto's battered reputation and uncertain regulatory outlook, especially in the U.S. But will it work?
 
 The exchange announced a new [grassroots lobbying campaign](https://twitter.com/coinbase/status/1630592674020335617) on Tuesday, including a national petition drive, to [influence pending crypto legislation](https://www.theblock.co/post/215829/coinbase-launches-grassroots-campaign-to-influence-us-lawmakers-and-regulators) in Congress. Coinbase has also been touting a [recent poll](https://assets.ctfassets.net/c5bd0wqjc7v0/WvuOkBwNXZsqhd6EWtkEL/7f94f8b6fbb222f3faf4d0346e473012/Morning_Consult_Cryptocurrency_Perception_Study_Feb2023_Memo__1_.pdf) by partner Morning Consult showing widespread mistrust and discontent among Americans regarding the traditional financial industry.
 
-Armed with that polling data, Coinbase CEO Brian Armstrong sunnily touted crypto as a necessary "update" to the U.S. financial system in television interviews Thursday with [Bloomberg](https://www.youtube.com/watch?v=SZobPKQYRyE&t) and [CNBC](https://www.youtube.com/watch?v=xrMtYuYV_Yw), as well as [an essay](https://www.cnbc.com/2023/03/01/op-ed-offshoring-crypto-hurts-financial-system-americas-standing.html) on the latter's website.
+Armed with that polling data, Coinbase CEO Brian Armstrong sunnily touted crypto as a necessary "update" to the U.S. financial system in television interviews Thursday with [Bloomberg](https://www.youtube.com/watch?v=SZobPKQYRyE&t) and [CNBC](https://www.youtube.com/watch?v=xrMtYuYV_Yw), as well as in [an essay](https://www.cnbc.com/2023/03/01/op-ed-offshoring-crypto-hurts-financial-system-americas-standing.html) on the latter's website.
 
 ![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)
 
@@ -30,47 +28,25 @@ The week's other notable headlines:
 ![An axe in Coinbase blue](https://w3w.news/img/illos/axe-final.jpg)
 *"Coinbase's Axe" by Peter A. McKay × DALL·E*
 
-- The Bureau of International Settlements says banks cut their crypto exposure by 44% last year. (https://www.coindesk.com/policy/2023/02/28/certain-banks-crypto-exposure-dropped-by-44-globally-in-2022-from-previous-year-bis/?utm_medium=referral&utm_source=rss&utm_campaign=headlines)
+- **The Bureau of International Settlements says** banks around the world [cut crypto exposure](https://www.coindesk.com/policy/2023/02/28/certain-banks-crypto-exposure-dropped-by-44-globally-in-2022-from-previous-year-bis/?utm_medium=referral&utm_source=rss&utm_campaign=headlines) by 44% last year.
 
-- Crypto VC has slowed in 1Q '23, according to Crunchbase data (https://news.crunchbase.com/fintech-ecommerce/web3-venture-funding-crypto-prices/).
+- **Venture investment in web3 has fallen sharply** in the first quarter of 2023, [according to Crunchbase data](https://news.crunchbase.com/fintech-ecommerce/web3-venture-funding-crypto-prices/). So far in the period due to end March 31, about $1.7 billion has flowed into web3 startups across 233 funding rounds for those companies. At that pace, the industry will likely fall far short of the $2.7 billion that was invested across 373 deals in the fourth quarter.
 
-- Ten major Japanese companies are partnering to create a new "metaverse economic zone." (https://bitcoinist.com/japanese-firms-to-create-metaverse-zone/)
+- **The popular gaming platform Unity** is adding support for [13 blockchain-based software developer kits](https://www.coindesk.com/web3/2023/02/28/gaming-engine-unity-taps-metamask-immutable-x-and-solana-for-web3-developer-tools/), including MetaMask's, Solana's, Algorand's, and Solana's. The move paves the way for new web3 features to be added to Unity-based games.
 
-- New crypto regulations in France (https://www.theblock.co/post/215461/france-passes-new-crypto-registration-rules?utm_source=rss&utm_medium=rss) | https://www.coindesk.com/policy/2023/02/28/french-national-assembly-votes-for-tougher-registration-rules-for-crypto-firms/?utm_medium=referral&utm_source=rss&utm_campaign=headlines |
+- **Bank of America analysts** issued a bullish report praising [Starbucks' early experiments](https://www.theblock.co/post/215750/starbuckss-web3-odyssey-is-seeing-early-signs-of-success-bofa-says?utm_source=rss&utm_medium=rss) with NFT-based customer rewards.
 
-- Digital pound update: (https://bitcoinist.com/britain-wants-to-get-ahead-in-cbdc-race-heres-how/)
+- **Ten major Japanese companies** are partnering to create a new ["metaverse economic zone."](https://bitcoinist.com/japanese-firms-to-create-metaverse-zone/)
 
-- UAE (https://bitcoinist.com/uae-launching-free-zone-virtual-asset-companies/)
+- **The French National Assembly** passed [new registration](https://www.theblock.co/post/215461/france-passes-new-crypto-registration-rules?utm_source=rss&utm_medium=rss) rules for firms offering crypto services. The bill, which President Emmanuel Macron is expected to sign into law shortly, is intended to coordinate French law with broader rules expected to be passed by the European Union's parliament in April.
 
-- The game development platform Unity unveiled new web3 integrations. <!-- https://www.coindesk.com/web3/2023/02/28/gaming-engine-unity-taps-metamask-immutable-x-and-solana-for-web3-developer-tools/?utm_medium=referral&utm_source=rss&utm_campaign=headlines -->
+- **The Bank of England's deputy governor** said in remarks to a parliamentary committee that issuance of a digital pound could "[open up a new frontier](https://bitcoinist.com/britain-wants-to-get-ahead-in-cbdc-race-heres-how/) in how money is used."
 
-- Bank of America says Starbucks' early experiments with NFTs are going well. (https://www.theblock.co/post/215750/starbuckss-web3-odyssey-is-seeing-early-signs-of-success-bofa-says?utm_source=rss&utm_medium=rss)
+- **The startup Casetext** launched a [new AI app](https://www.lawnext.com/2023/03/casetext-launches-co-counsel-its-openai-based-legal-assistant-to-help-lawyers-search-data-review-documents-draft-memos-analyze-contracts-and-more.html) called CoCounsel designed to help lawyers crunch data, vet documents, and perform other specialized tasks.
 
-- New AI legal assistant launched, called CoCounsel. <!-- Need link. -->
+- **A Texas home** is being [sold as an NFT](https://www.theblock.co/post/215612/tokenized-texan-house-listed-for-sale-on-solana?utm_source=rss&utm_medium=rss) on the Solana chain.
 
-- A Texas home is being tokenized and sold on the Solana chain. (https://www.theblock.co/post/215612/tokenized-texan-house-listed-for-sale-on-solana?utm_source=rss&utm_medium=rss)
-
-- Bank robbers seeking to get their own money out. https://www.nytimes.com/2023/02/28/opinion/lebanon-crisis-economy-bank-robbers.html
-
-<!--
-
-Some additional candidates...
-
-- Bitcoin miner Marathon is having accounting issues. (https://www.theblock.co/post/215869/bitcoin-miner-marathon-cancels-q4-earnings-call-over-accounting-corrections?utm_source=rss&utm_medium=rss)
-
-- UBS says upcoming repayments for Mt. Gox victims won't destabilize the broader bitcoin market. (https://www.theblock.co/post/215752/ubs-says-mt-gox-repayments-are-unlikely-to-destabilize-bitcoin-price?utm_source=rss&utm_medium=rss)
-
-- Grayscale is suing the SEC over its ETF inaction. (https://www.coindesk.com/policy/2023/02/28/grayscale-to-argue-secs-inconsistency-as-bitcoin-etf-dispute-heads-toward-court/?utm_medium=referral&utm_source=rss&utm_campaign=headlines)
-
-- new cftc fraud charges against an ftx exec. <!-- need link
-
-- The SEC subpoenaed Robinhood shortly after the FTX meltdown. (https://www.theblock.co/post/215568/sec-served-subpoena-to-robinhood-shortly-after-ftx-debacle?utm_source=rss&utm_medium=rss)
-
-- ohio joined settlement with nexo. https://www.coindesk.com/policy/2023/02/28/ohio-joins-225m-multistate-settlement-against-crypto-lender-nexo/?utm_medium=referral&utm_source=rss&utm_campaign=headlines
-
-- WSJ on iPhone hacking. (https://www.wsj.com/video/series/joanna-stern-personal-technology/apples-iphone-passcode-problem-how-thieves-can-take-over-in-minutes/967C3B74-90D3-45EA-BAA4-4ECDBB24715D)
-
-- Ex-Googler gave interview to NYT about how she became disillusioned with its work culture. (https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy5zaW1wbGVjYXN0LmNvbS9rc0dZWl9aMw/episode/NmM3MGI1ODYtY2NhMC00Yjg3LTllNWQtYTNmM2YzNGFjODY3?sa=X&ved=0CAUQkfYCahcKEwj4r-vKlrb9AhUAAAAAHQAAAAAQAQ) -->
+- **The New York Times claims** to have found ["the world's most honorable bank robbers."](https://www.nytimes.com/2023/02/28/opinion/lebanon-crisis-economy-bank-robbers.html). They're depositors who are frustrated by Lebanon's recent economic crisis and are resorting to violence to withdraw *their own money*. 😲 
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
