--- a/newsletter/2023-03-12.md
+++ b/newsletter/2023-03-12.md
@@ -1,4 +1,4 @@
-# tktktktktk
+# SVB casts a long shadow
 ## #Web3Weekly: March 5-11, 2023
 
 <!--
@@ -10,67 +10,56 @@
 
 **It was a profoundly scary week** for decentralized and traditional finance alike.
 
-Silicon Valley Bank [shut down](https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter) on Friday, the largest failure of a U.S. bank since the financial crisis of 2008.
+Silicon Valley Bank shut down on Friday, the largest failure of a U.S. bank since the financial crisis of 2008. A classic [bank run](https://www.investopedia.com/terms/b/bankrun.asp) ultimately did in SVB, but that was really the last straw in a longer series of misfortunes.
 
-It's of course never good when comparisons to that sad chapter come into play. People naturally wonder whether a similar global contagion will take hold now, spilling into the "real economy" of factories and shopping malls and corner stores and other tangible stuff in everyday life.
+Some useful context from the [Wall Street Journal](https://www.wsj.com/articles/svb-financial-pulls-capital-raise-explores-alternatives-including-possible-sale-sources-say-11de7522):
 
-The consensus for now seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But SVB's meltdown -- combined with struggles of other firms lately like the investment bank [Credit Suisse](https://www.reuters.com/business/finance/credit-suisse-delays-publication-annual-report-following-sec-call-2023-03-09/) and crypto bank [Silvergate](https://www.theverge.com/2023/3/8/23631320/silvergate-wind-down-liquidiation-announcement) -- still prompts understandable concern among investors.
+> *SVB’s deposits boomed alongside the tech industry, rising 86% in 2021 to $189 billion and peaking at $198 billion a quarter later. The bank poured large amounts of the deposits into U.S. Treasurys and other government-sponsored debt securities. Soon after, the Fed began increasing rates.*
 
-Here are the best stories I've been reading that explain the risks ahead -- and a few market bright spots as well:
+> Rising rates and the tech downturn caused deposits to decline, spurring the bank to sell substantially all of its available-for-sale securities.*
 
+SVB recently announced plans to restructure its balance sheet. But that ultimately backfired, according to [Fast Company](https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter):
 
-<!--
+> *Late Wednesday, SVB said it was hoping to raise $2.25 billion via a stock sale and investments in order to strengthen its balance sheet, as deposits from startups struggling for funding have dropped in recent months. That spooked both customers and, more importantly, venture capitalists, many of whom advised their clients to pull their money from the bank.*
 
-SVB was a top-20 bank, but it wasn't top five, which was the tier that had to be bailed out in '08.
+> *As word of that advice leaked out, other customers began to pull money out at a phenomenal rate. SVB had reportedly hired an adviser to explore a possible sale, but with the run on the bank happening, it found itself at risk of collapse. That’s when California and the [Federal Deposit Insurance Corp.] stepped in, closing SVB and creating the new Deposit Insurance National Bank of Santa Clara, which took over all insured deposits at SVB.*
 
-Having covered the 2008 crisis as a markets reporter for the Wall Street Journal, the situation is complicated,
+SVB thus became the biggest bank to be rescued by FDIC since [Washington Mutual](https://en.wikipedia.org/wiki/Washington_Mutual) in the early days of the 2008 financial crisis.
 
-- **SVB. SVB isn't the only financial firm that's struggled lately. The conventional investment bank [Credit Suisse]() to crypto bank [Silvergate]().
+It's of course never good when comparisons to that sad chapter come into play. It also doesn't help that SVB's meltdown happened on the heels of recent struggles at other firms like investment bank [Credit Suisse](https://www.reuters.com/business/finance/credit-suisse-delays-publication-annual-report-following-sec-call-2023-03-09/) and crypto bank [Silvergate](https://www.theverge.com/2023/3/8/23631320/silvergate-wind-down-liquidiation-announcement) as well.
 
-- **What comes next for SVB customers?** <!-- Roku, Roblox, and RocketLab, SoFi
+People naturally wonder whether a similar global contagion to 2008 could take hold now, spilling into the "real economy" of factories and shopping malls and corner stores and other tangible stuff in everyday life.
 
-- **TKTKTK** <!-- Other macro stuff:
+The consensus for now seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But that doesn't necessarily mean all is well either. There is, after all, a wide spectrum of plausible near-term scenarios between "2008-style armageddon" and "bull market."
 
-- **TKTKTKT**
+Here are the best stories I've been reading about the risks ahead:
 
-- VC Jenny Fielding dumurred when asked by a Bloomberg reporter whether there might be startu failures: "We are worried about the short term."
+- **Former FDIC chair Sheila Bair,** who served during the 2008 crisis, spoke with MSNBC's Ali Velshi <!-- TKTKTKTK -->
 
-- <!-- ((Roku))  | Only 16 branches, even though it was TKTKTKth biggest bank in the U.S. | Former FDIC chair Sheila Bair (Velshi on MSNBC)
+- Customes... <!-- ((Roku))  | Only 16 branches, even though it was TKTKTKth biggest bank in the U.S. | Former FDIC chair Sheila Bair (Velshi on MSNBC) -->
 
-- Credit Suisse
+- **Former clients:** <!-- Roku, Roblox, and RocketLab, SoFi -->
 
-- Silvergate update
+- Fed/markets update. Traders spooked by Powell remarks. Rising expectations of further rate hikes. <!-- https://www.theblock.co/post/217739/crypto-prices-whipsaw-on-fed-chair-powells-congressional-testimony?utm_source=rss&utm_medium=rss -->
 
-- <!-- *Debt ceiling not going well. "Dead on arrival."
+- **Keep an eye on the debt ceiling as well.** <!-- Biden's budget is "dead on arrival" -->
 
-- Ripple progress vs SEC.
+- Grayscale progress vs SEC. <!-- Need link about opening arguments Rant on Grayscale/SEC showdown.  Grayscale seems to be winning its court case claiming it should be able to turn GBTC into an ETF. In opening arguments, two of three federal judges seemed sympathetic to plaintiff. But ruling could take awhile, perhaps a few months, according to Bloomberg.
+ -->
+
+- CME crypto derivs reach new milestones: https://www.theblock.co/post/217448/crypto-derivatives-on-the-cme-reach-new-milestones-amid-regulatory-uncertainty?utm_source=rss&utm_medium=rss
 
 - **Binance's purchase of Voyager** assets is moving forward. https://www.theblock.co/post/217901/binance-us-gets-green-light-to-buy-voyager-digital-assets?utm_source=rss&utm_medium=rss | Binance has grown its market share for four straight months. https://www.coindesk.com/markets/2023/03/08/binance-extends-market-share-for-fourth-consecutive-month/?utm_medium=referral&utm_source=feedly&utm_campaign=headlines | https://blog.cryptocompare.com/market-spotlight-crypto-bull-takes-a-breather-591c240c3e37  
 
-**What it all means:** <!-- Transition to analytical section, drawing on your own 2008 experience
+- **Crypto has no chill for economist Paul Krugman.** <!-- The Nobel laureate, New York Times columnist, and outspoken crypto skeptic drew
+mment drew ranted on Twitter about Venmo after he experienced an account problem that left him unable to make payments through the app.
+Nobel-winning economist and outspoken crypto skeptic  (https://twitter.com/paulkrugman/status/1633472068355346437) -->
 
-- Will there be a broader contagion?
-- What will crypto's role be?
-- What's the proper policy response?
+
+
 
 
 <!-- Affiliate riff: Shout out Bitbond...
-
-
-Lead with bank failures.
-
-WSJ lead story on SVB at https://www.wsj.com/articles/svb-financial-pulls-capital-raise-explores-alternatives-including-possible-sale-sources-say-11de7522
-
-A telling passage about the bank's rise and fall:
-
-SVB’s deposits boomed alongside the tech industry, rising 86% in 2021 to $189 billion and peaking at $198 billion a quarter later. The bank poured large amounts of the deposits into U.S. Treasurys and other government-sponsored debt securities. Soon after, the Fed began increasing rates.
-
-Rising rates and the tech downturn caused deposits to decline, spurring the bank to sell substantially all of its available-for-sale securities.
-
-WIRED coverage: https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter
-
-
-rant on Grayscale/SEC showdown.  Grayscale seems to be winning its court case claiming it should be able to turn GBTC into an ETF. In opening arguments, two of three federal judges seemed sympathetic to plaintiff. But ruling could take awhile, perhaps a few months, according to Bloomberg.
 
 Also wrap in other regulatory items:
 
@@ -78,13 +67,8 @@ Also wrap in other regulatory items:
 
 - Ripple lawsuit. <!-- Garlinghouse going on offense.  Remark to Bloomberg: "The only country on the planet that thinks XRP is a security is the United States."
 
-- SVB and Credit Suisse problems.
 
 - The world's first "NFT restaurant" is coming to NYC: https://ny.eater.com/2022/1/13/22880787/worlds-first-nft-restaurant-flyfish-club-opening-nyc
-
-
-
-The week's other notable headlines:
 
 
 - Blur's bidding process on non-fungible tokens seems weird. https://www.theblock.co/post/217961/blur-bid-incentives-skew-market-lead-to-offers-on-nfts-above-buy-now-prices?utm_source=rss&utm_medium=rss
@@ -93,21 +77,10 @@ The week's other notable headlines:
 
 - OpenChat conducted a "decentralization sale," is moving to community management. https://www.theblock.co/post/217854/openchat-to-transfer-control-to-community-after-5-5-million-decentralization-sale?utm_source=rss&utm_medium=rss
 
-- **Crypto has no chill for economist Paul Krugman.** <!-- The Nobel laureate, New York Times columnist, and outspoken crypto skeptic drew
-mment drew ranted on Twitter about Venmo after he experienced an account problem that left him unable to make payments through the app.
-Nobel-winning economist and outspoken crypto skeptic  (https://twitter.com/paulkrugman/status/1633472068355346437) -->
 
 
-
-<!--
-
-- Silvergate update. <!-- A big ongoing story to keep an eye on. Need link.
-
-- CME crypto derivs reach new milestones: https://www.theblock.co/post/217448/crypto-derivatives-on-the-cme-reach-new-milestones-amid-regulatory-uncertainty?utm_source=rss&utm_medium=rss
 
 - Cointelegraph: Russia is waging (and losing) a "crypto war" against Ukraine. https://www.youtube.com/watch?v=j5jQr8nHy7U
-
-- Fed/markets update. Traders spooked by Powell remarks. Rising expectations of further rate hikes. <!-- https://www.theblock.co/post/217739/crypto-prices-whipsaw-on-fed-chair-powells-congressional-testimony?utm_source=rss&utm_medium=rss
 
 - Tim Draper joined BitBond's advisory board. https://www.theblock.co/post/217761/tim-draper-joins-ethermails-advisory-board-leads-4-million-raise?utm_source=rss&utm_medium=rss
 
